--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -24,6 +24,7 @@
     "next": "^13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "svix": "^1.13.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
