--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -15,6 +15,7 @@
     "@acme/api": "*",
     "@acme/tailwind-config": "*",
     "@clerk/clerk-expo": "^0.17.7",
+    "@hookform/resolvers": "^3.3.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
@@ -34,9 +35,11 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "^3.26.0",
+    "react-native-select-dropdown": "^3.4.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10"
   },
