--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -28,6 +28,7 @@
     "@trpc/server": "^10.1.0",
     "expo": "^48.0.6",
     "expo-auth-session": "^4.0.3",
+    "expo-linear-gradient": "^12.5.0",
     "expo-random": "^13.0.0",
     "expo-secure-store": "^12.1.1",
     "expo-status-bar": "^1.4.2",
